# TCP_Chat

./: CMakeLists.txt  README.md
code/: client.cpp  server.cpp
code/inc/: client.h  server.h
code/src/: client.cpp  server.cpp
inc/: client.h  clientFuncs.cpp  common.h  server.h  serverFuncs.cpp
test/: client_test.cpp  server_test.cpp
test/src/: client_test.cpp  server_test.cpp
